--- a/src/components/Symbols/Symbols.module.css
+++ b/src/components/Symbols/Symbols.module.css
@@ -21,6 +21,8 @@
 .draw {
   /* SVG is not focusable via keyboard so we can safely remove the focus styles! */
   outline: none;
+  /* Fix for Layouting Bug in Safari: #186 */
+  position: absolute;
 }
 
 .animateX,
